--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/flowtile.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlowTile</title>
+    <meta name="google-site-verification" content="XP5yrYEiYidEAL3pLRflMLcw5RTXx7vgtnR797eHLXk" />
   </head>
   <body>
     <div id="root"></div>
