--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/flowtile.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlowTile</title>
-    <meta name="google-site-verification" content="XP5yrYEiYidEAL3pLRflMLcw5RTXx7vgtnR797eHLXk" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/flowtile.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FlowTile</title>
+  <meta name="title" content="FlowTile – Seamless Tile Pattern Editor for Creative Projects and Visual Designers" />
+  <meta name="description"
+    content="FlowTile is a modern visual editor to design and export seamless, infinitely repeatable tile patterns. Ideal for creatives, game designers, and visual artists." />
+  <meta name="robots" content="index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta httpEquiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="language" content="English" />
+  <link rel="canonical" href="https://flowtile.vercel.app/" />
+  <link rel="icon" href="/flowtile.svg" type="image/svg+xml" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://flowtile.vercel.app/" />
+  <meta property="og:site_name" content="FlowTile" />
+  <meta property="og:title"
+    content="FlowTile – Seamless Tile Pattern Editor for Creative Projects and Visual Designers" />
+  <meta property="og:description"
+    content="Design and export modular, repeatable tile-based graphics with FlowTile. A tool for seamless pattern design in games, digital art, and creative projects." />
+  <meta property="og:image" content="https://flowtile.vercel.app/banner.webp" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://flowtile.vercel.app/" />
+  <meta name="twitter:title"
+    content="FlowTile – Seamless Tile Pattern Editor for Creative Projects and Visual Designers" />
+  <meta name="twitter:description"
+    content="Create export-ready, infinitely repeatable tile graphics with FlowTile – the intuitive visual tool for creatives." />
+  <meta name="twitter:image" content="https://flowtile.vercel.app/banner.webp" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Flowtile",
+  "url": "https://flowtile.app/",
+  "image": "https://flowtile.app/banner.jpg",
+  "description": "Flowtile is a modern visual editor to design and export seamless, infinitely repeatable tile patterns. Ideal for creatives, game designers, and visual artists.",
+  "applicationCategory": "DesignApplication",
+  "operatingSystem": "All",
+  "browserRequirements": "Requires JavaScript",
+  "creator": {
+    "@type": "Person",
+    "name": "Vinay Dangodra"
+  }
+}
+</script>
+
+  <meta name="google-site-verification" content="XP5yrYEiYidEAL3pLRflMLcw5RTXx7vgtnR797eHLXk" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
